fix name spacing

--- a/css/interactive-expeditions-explorer.css
+++ b/css/interactive-expeditions-explorer.css
@@ -10,7 +10,7 @@ img {
 /* Ensures that the expedition title is centered on the thumbnail and adds shadow, etc. for styling */
 .centered {
     transform: translateY(-50%);
-    width: calc(100% - 30px - 2vw);
+    width: calc(100% - 30px - 4vw);
     text-align: center;
     position: absolute;
     top: 50%;
